--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "debug": "^4.3.1",
     "fuse.js": "^6.4.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
